edicion tarjetas de producto en index

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="shortcut icon" href="./multimedia/img/noun-fossil-3159389.svg" type="image/x-icon">
+    <title>Kofe</title>
+    <link rel="shortcut icon" href="../multimedia/img/logo-mini-web.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
@@ -27,11 +27,11 @@
             <i class="icon-nav fa-solid fa-bars"></i>
             <nav class="navegador-principal">
                 <ul class="navegador">
-                    <li><a href="./index.html">Inicio</a></li>
+                    <!-- <li><a href="./index.html">Inicio</a></li> -->
                     <!-- <li><a href="./pages/Info.html">Info</a></li> -->
                     <li><a href="./pages/producto.html">Productos</a></li>
-                    <li><a href="./pages/sobrenosotros.html">Sobre nosotros</a></li>
-                    <li><a href="./pages/trabajaconnosotros.html" target="_blank">Trabaja con nosotros</a></li>
+                    <li><a href="./pages/sobrenosotros.html">Nosotros</a></li>
+                    <li><a href="./pages/trabajaconnosotros.html" target="_blank">Empleo</a></li>
                 </ul>
             </nav>
         </div>
@@ -74,9 +74,11 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Cafe frutos del bosque</p>
-                            <p class="texto-tarjeta mb-0">Cafe de especialidad afrutado</p>
-                            <p class="texto-tarjeta mb-0">Origen: Colombia</p>
-                            <p class="texto-tarjeta mb-0">500gr</p>
+                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
+                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
+                                toffee.</p>
+                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Colombia</p>
+                            <p class="texto-tarjeta-gramos mb-0">500gr</p>
                         </div>
                         <div class="chip-contenedor">
                             <button class="chip-cesta-compra">Añadir a la cesta</button>
