--- a/pages/producto.html
+++ b/pages/producto.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kofe</title>
-    <link rel="shortcut icon" href="./multimedia/img/noun-fossil-3159389.svg" type="image/x-icon">
+    <link rel="shortcut icon" href="../multimedia/img/logo-mini-web.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/style.css">
@@ -45,7 +45,7 @@
                     </ul>
                 </div>
             </nav>
-        
+
             <div class="iconos-del-nav col-12 col-md-3">
                 <!-- <nav class="contenedor-nav-paginas">
                     <div class="dropdown menu-ham-paginas d-block d-md-none">
@@ -87,14 +87,14 @@
                         <div class="imagen-principal-tarjeta">
                             <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
                         </div>
-                        <div class="estrellas">
-                            <img src="../multimedia/img/Group 205.png" alt="">
-                        </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
                             <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
                                 fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
                                 toffee.</p>
+                            <div class="estrellas">
+                                <img src="../multimedia/img/Group 205.png" alt="">
+                            </div>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
