--- a/index.html
+++ b/index.html
@@ -54,30 +54,12 @@
                 <div class="col-12 col-md-3 p-2">
                     <div class="tarjeta-de-producto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="./multimedia/img/imagen de la tarjeta.webp">
+                            <img src="./multimedia/img/cafe-granos-01.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Cafe frutos del bosque</p>
-                            <p class="texto-tarjeta mb-0">Cafe de especialidad afrutado</p>
-                            <p class="texto-tarjeta mb-0">Origen: Colombia</p>
-                            <p class="texto-tarjeta mb-0">500gr</p>
-                        </div>
-                        <div class="chip-contenedor">
-                            <button class="chip-cesta-compra">Añadir a la cesta</button>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
-                        <div class="imagen-principal-tarjeta">
-                            <img src="./multimedia/img/imagen de la tarjeta.webp">
-                        </div>
-                        <div>
-                            <p class="titulo-principal-tarjeta mb-0">Cafe frutos del bosque</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
-                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
-                                toffee.</p>
-                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Colombia</p>
+                            <p class="titulo-principal-tarjeta mb-0">Café Robusta</p>
+                            <p class="texto-tarjeta mb-0">El otro gran café no es otro que el Robusta, perteneciente a la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel del mar, a diferencia del arábica que se cultiva entre los 800 y los 2100 metros. </p>
+                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> República del Congo</p>
                             <p class="texto-tarjeta-gramos mb-0">500gr</p>
                         </div>
                         <div class="chip-contenedor">
@@ -88,13 +70,13 @@
                 <div class="col-12 col-md-3 p-2">
                     <div class="tarjeta-de-producto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="./multimedia/img/imagen de la tarjeta.webp">
+                            <img src="./multimedia/img/cafe-granos-02.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Cafe frutos del bosque</p>
-                            <p class="texto-tarjeta mb-0">Cafe de especialidad afrutado</p>
-                            <p class="texto-tarjeta mb-0">Origen: Colombia</p>
-                            <p class="texto-tarjeta mb-0">500gr</p>
+                            <p class="titulo-principal-tarjeta mb-0">Café Java</p>
+                            <p class="texto-tarjeta mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII, cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al café unas características muy marcadas, con una semilla que destaca por su fuerte sabor, con toques picantes y que deja una sensación de dulzor en el paladar.</p>
+                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Indonesia</p>
+                            <p class="texto-tarjeta-gramos mb-0">500gr</p>
                         </div>
                         <div class="chip-contenedor">
                             <button class="chip-cesta-compra">Añadir a la cesta</button>
@@ -104,13 +86,29 @@
                 <div class="col-12 col-md-3 p-2">
                     <div class="tarjeta-de-producto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="./multimedia/img/imagen de la tarjeta.webp">
+                            <img src="./multimedia/img/cafe-granos-03.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Cafe frutos del bosque</p>
-                            <p class="texto-tarjeta mb-0">Cafe de especialidad afrutado</p>
-                            <p class="texto-tarjeta mb-0">Origen: Colombia</p>
-                            <p class="texto-tarjeta mb-0">500gr</p>
+                            <p class="titulo-principal-tarjeta mb-0">Café arábica</p>
+                            <p class="texto-tarjeta mb-0">La planta de café arábica es uno de los dos principales cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades tienes de llevarte a los labios siempre que te tomes una taza.</p>
+                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Arabia Saudí</p>
+                            <p class="texto-tarjeta-gramos mb-0">500gr</p>
+                        </div>
+                        <div class="chip-contenedor">
+                            <button class="chip-cesta-compra">Añadir a la cesta</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-3 p-2">
+                    <div class="tarjeta-de-producto">
+                        <div class="imagen-principal-tarjeta">
+                            <img src="./multimedia/img/cafe-granos-04.png">
+                        </div>
+                        <div>
+                            <p class="titulo-principal-tarjeta mb-0">Café Tarrazú</p>
+                            <p class="texto-tarjeta mb-0">Tarrazú es otro de los tipos de café en grano. Es otra variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica, siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café ligeramente ácido y con sabor parecido al del chocolate.</p>
+                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Costa Rica</p>
+                            <p class="texto-tarjeta-gramos mb-0">500gr</p>
                         </div>
                         <div class="chip-contenedor">
                             <button class="chip-cesta-compra">Añadir a la cesta</button>
@@ -129,27 +127,12 @@
                     <div class="tarjeta-de-receta ">
                         <div class="imagen-tarjeta-recetas">
                             <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
-                            <p class="titulo-principal-tarjeta-recetas mb-0">Tarta de cafe</p>
+                            <p class="titulo-principal-tarjeta-recetas mb-0">Tarta de café</p>
                         </div>
                         <div class="contenedor-nivel-de-dificultad-recetas">
                             <p class="texto-tarjeta-2 mb-0">Dificultad:</p>
                             <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                                <img src="./multimedia/img/nivel_de_experiencia_01.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -157,28 +140,13 @@
                 <div class=" col-12 col-md-4 p-2 ">
                     <div class="tarjeta-de-receta ">
                         <div class="imagen-tarjeta-recetas ">
-                            <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
-                            <p class="titulo-principal-tarjeta-recetas mb-0">Tarta de cafe</p>
+                            <img src="./multimedia/img/tiramisu.jpg" alt="">
+                            <p class="titulo-principal-tarjeta-recetas mb-0">Tiramisú</p>
                         </div>
                         <div class="contenedor-nivel-de-dificultad-recetas">
                             <p class="texto-tarjeta-2 mb-0">Dificultad:</p>
                             <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                                <img src="./multimedia/img/nivel_de_experiencia_02.png" alt="">
                             </div>
                         </div>
                     </div>
@@ -186,27 +154,12 @@
                     <div class="tarjeta-de-receta">
                         <div class="imagen-tarjeta-recetas">
                             <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
-                            <p class="titulo-principal-tarjeta-recetas mb-0">Tarta de cafe</p>
+                            <p class="titulo-principal-tarjeta-recetas mb-0">Mantequilla de café</p>
                         </div>
                         <div class="contenedor-nivel-de-dificultad-recetas">
                             <p class="texto-tarjeta-2 mb-0">Dificultad:</p>
                             <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
-                            </div>
-                            <div class="imagen-nivel-de-receta">
-                                <img src="./multimedia/img/grano de cafe.svg" alt="">
+                                <img src="./multimedia/img/nivel_de_experiencia_03.png" alt="">
                             </div>
                         </div>
                     </div>
