maquetacion de index

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <h2 class="titulo-de-secciones">ESPECIALES</h2>
             <div class="contenedor-de-tarjetas">
                 <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
+                    <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
                             <img src="./multimedia/img/cafe-granos-01.png">
                         </div>
@@ -68,7 +68,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
+                    <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
                             <img src="./multimedia/img/cafe-granos-02.png">
                         </div>
@@ -84,7 +84,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
+                    <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
                             <img src="./multimedia/img/cafe-granos-03.png">
                         </div>
@@ -100,8 +100,8 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-3 p-2">
-                    <div class="tarjeta-de-producto">
-                        <div class="imagen-principal-tarjeta">
+                    <div class="tarjeta-de-producto mx-auto">
+                        <div class="imagen-principal-tarjeta content">
                             <img src="./multimedia/img/cafe-granos-04.png">
                         </div>
                         <div>
@@ -120,13 +120,13 @@
             </div>
         </div>
 
-        <div class="carrusel-video-recetas container px-0">
+        <div class="carrusel-video-recetas container px-0 mx-auto">
             <h2 class="titulo-de-secciones">RECETAS</h2>
             <div class="contenedor-tarjetas-recetas">
-                <div class=" col-12 col-md-4 p-2 ">
-                    <div class="tarjeta-de-receta ">
+                <div class=" contenedor-tarjetas col-12 col-md-4 p-2 ">
+                    <div class="tarjeta-de-receta mx-auto">
                         <div class="imagen-tarjeta-recetas">
-                            <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
+                            <img src="./multimedia/img/receta-tarta.png" alt="">
                             <p class="titulo-principal-tarjeta-recetas mb-0">Tarta de café</p>
                         </div>
                         <div class="contenedor-nivel-de-dificultad-recetas">
@@ -137,10 +137,10 @@
                         </div>
                     </div>
                 </div>
-                <div class=" col-12 col-md-4 p-2 ">
-                    <div class="tarjeta-de-receta ">
+                <div class=" contenedor-tarjetas col-12 col-md-4 p-2 ">
+                    <div class="tarjeta-de-receta mx-auto">
                         <div class="imagen-tarjeta-recetas ">
-                            <img src="./multimedia/img/tiramisu.jpg" alt="">
+                            <img src="./multimedia/img/receta-tiramisu.png" alt="">
                             <p class="titulo-principal-tarjeta-recetas mb-0">Tiramisú</p>
                         </div>
                         <div class="contenedor-nivel-de-dificultad-recetas">
@@ -150,10 +150,10 @@
                             </div>
                         </div>
                     </div>
-                </div><div class=" col-12 col-md-4 p-2 ">
-                    <div class="tarjeta-de-receta">
+                </div><div class=" contenedor-tarjetas col-12 col-md-4 p-2 ">
+                    <div class="tarjeta-de-receta mx-auto">
                         <div class="imagen-tarjeta-recetas">
-                            <img src="./multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg" alt="">
+                            <img src="./multimedia/img/receta-mantequilla.png" alt="">
                             <p class="titulo-principal-tarjeta-recetas mb-0">Mantequilla de café</p>
                         </div>
                         <div class="contenedor-nivel-de-dificultad-recetas">
