--- a/pages/empleo.html
+++ b/pages/empleo.html
@@ -19,37 +19,51 @@
 
 <body>
     <header>
-
         <div class="navegador-paginas">
-            <div class="logo-principal-blanco">
+            <div class="logo-principal-blanco col-12 col-md-3 ">
                 <a href="../index.html" alt="volver al inicio"><img src="../multimedia/img/logo_kofe_blanco.svg"></a>
             </div>
-            <nav class="contenedor-nav-paginas">
-                <div class="iconos-del-nav">
-                    <div class="contendor-iconos-nav">
-                        <button class="boton-icono-nav">
-                            <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
-                        </button>
-                        <button class="boton-icono-nav">
-                            <img src="../multimedia/img/🦆 icon _person_.svg" alt="">
-                        </button>
-                        <button class="boton-icono-nav">
-                            <img src="../multimedia/img/🦆 icon _shopping cart_.svg" alt="">
-                        </button>
-                    </div>
+            <nav class="contenedor-nav-paginas col-3 col-md-6">
+                <div class="dropdown menu-ham-paginas d-block d-md-none">
+                    <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
+                        aria-expanded="false">
+                        <img src="../multimedia/img/menu_hambueguesa.svg">
+                    </button>
+                    <ul class="dropdown-menu">
+                        <li><a class="dropdown-item" href="./producto.html">Productos</a></li>
+                        <li><a class="dropdown-item" href="./trabajaconnosotros.html">Empleo</a></li>
+                        <li><a class="dropdown-item" href="./sobrenosotros.html">Nosotros</a></li>
+                    </ul>
                 </div>
-                <div class="ul-contenedor">
-                    <i class="icon-menu-paginas fa-solid fa-bars"></i>
+                <div class="ul-contenedor col-9 col-md-auto d-none d-md-flex">
                     <ul class="nav-lista">
                         <!-- <li><a href="../index.html">Inicio</a></li>
-                                <li><a href="./Info.html">Info</a></li> -->
-                        <li><a href="./producto.html">Productos</a></li>
-                        <li><a href="./sobrenosotros.html">Sobre nosotros</a></li>
-                        <li><a href="./trabajaconnosotros.html" target="_blank">Trabaja con nosotros</a></li>
+                        <li><a href="./Info.html">Info</a></li> -->
+                        <li><a href="./productos.html">Productos</a></li>
+                        <li><a href="./nosotros.html">Nosotros</a></li>
+                        <li><a href="./empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
             </nav>
+
+            <div class="iconos-del-nav col-12 col-md-3">
+                <div class="contendor-iconos-nav">
+                    <button class="boton-icono-nav">
+                        <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
+                    </button>
+                    <button class="boton-icono-nav">
+                        <img src="../multimedia/img/🦆 icon _person_.svg" alt="">
+                    </button>
+                    <button class="boton-icono-nav">
+                        <img src="../multimedia/img/🦆 icon _shopping cart_.svg" alt="">
+                    </button>
+                </div>
+            </div>
         </div>
+    </header>
+    <div class="banner-rebajas">
+        <p>Envios gratis a partir de 30€ de pedido</p>
+    </div>
     </header>
     <main>
         <div class="banner-busca-empleo">
@@ -83,7 +97,7 @@
         <div class="container contenedor-formularios">
             <div class="col-12 col-md-4">
                 <div class="foto-cv">
-                    <img src="../multimedia/img/imagen de la tarjeta.webp" class="rounded float-start" alt="...">
+                    <img src="../multimedia/img/imagen-empleo-usuario.png" class="rounded float-start" alt="...">
                     <button type="button" class="btn btn-boton-subir-foto px-4">Subir foto</button>
                 </div>
             </div>
