--- a/pages/productos.html
+++ b/pages/productos.html
@@ -37,29 +37,16 @@
                 </div>
                 <div class="ul-contenedor col-9 col-md-auto d-none d-md-flex">
                     <ul class="nav-lista">
-                        <li><a href="../index.html">Inicio</a></li>
-                        <li><a href="./Info.html">Info</a></li>
-                        <li><a href="./producto.html">Productos</a></li>
-                        <li><a href="./sobrenosotros.html">Nosotros</a></li>
-                        <li><a href="./trabajaconnosotros.html" target="_blank">Empleo</a></li>
+                        <!-- <li><a href="../index.html">Inicio</a></li>
+                        <li><a href="./Info.html">Info</a></li> -->
+                        <li><a href="./productos.html">Productos</a></li>
+                        <li><a href="./nosotros.html">Nosotros</a></li>
+                        <li><a href="./empleo.html" target="_blank">Empleo</a></li>
                     </ul>
                 </div>
             </nav>
 
             <div class="iconos-del-nav col-12 col-md-3">
-                <!-- <nav class="contenedor-nav-paginas">
-                    <div class="dropdown menu-ham-paginas d-block d-md-none">
-                        <button class="btn btn-secondary dropdown-item menu-ham" type="button" data-bs-toggle="dropdown"
-                            aria-expanded="false">
-                            <img src="../multimedia/img/menu_hambueguesa.svg">
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><a class="dropdown-item" href="./producto.html">Productos</a></li>
-                            <li><a class="dropdown-item" href="./trabajaconnosotros.html">Empleo</a></li>
-                            <li><a class="dropdown-item" href="./sobrenosotros.html">Nosotros</a></li>
-                        </ul>
-                    </div>
-                </nav> -->
                 <div class="contendor-iconos-nav">
                     <button class="boton-icono-nav">
                         <img src="../multimedia/img/🦆 icon _search_.svg" alt="">
