--- a/index.html
+++ b/index.html
@@ -60,10 +60,16 @@
             </div>
         </div>
     </div>
-</header>
-<div class="banner-rebajas">
-    <p>Envios gratis a partir de 30€ de pedido</p>
-</div>
+    <div class="banner-promociones">
+        <p class="promociones-titulo"> Rebajas</p> 
+        <p class="promociones-titulo-numero">&nbsp;50%</p>
+
+    </div>
+
+    </header>
+    <div class="banner-rebajas">
+        <p>Envios gratis a partir de 30€ de pedido</p>
+    </div>
     <main>
         <div class="carrusel-de-productos container px-0">
             <h2 class="titulo-de-secciones">ESPECIALES</h2>
@@ -75,8 +81,13 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café Robusta</p>
-                            <p class="texto-tarjeta mb-0">El otro gran café no es otro que el Robusta, perteneciente a la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel del mar, a diferencia del arábica que se cultiva entre los 800 y los 2100 metros. </p>
-                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> República del Congo</p>
+                            <p class="texto-tarjeta mb-0">El otro gran café no es otro que el Robusta, perteneciente a
+                                la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
+                                resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
+                                cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel
+                                del mar, a diferencia del arábica que se cultiva entre los 800 y los 2100 metros. </p>
+                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> República del
+                                Congo</p>
                             <p class="texto-tarjeta-gramos mb-0">500gr</p>
                         </div>
                         <div class="chip-contenedor">
@@ -91,7 +102,10 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café Java</p>
-                            <p class="texto-tarjeta mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII, cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al café unas características muy marcadas, con una semilla que destaca por su fuerte sabor, con toques picantes y que deja una sensación de dulzor en el paladar.</p>
+                            <p class="texto-tarjeta mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
+                                cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al
+                                café unas características muy marcadas, con una semilla que destaca por su fuerte sabor,
+                                con toques picantes y que deja una sensación de dulzor en el paladar.</p>
                             <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Indonesia</p>
                             <p class="texto-tarjeta-gramos mb-0">500gr</p>
                         </div>
@@ -107,8 +121,12 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café arábica</p>
-                            <p class="texto-tarjeta mb-0">La planta de café arábica es uno de los dos principales cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades tienes de llevarte a los labios siempre que te tomes una taza.</p>
-                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Arabia Saudí</p>
+                            <p class="texto-tarjeta mb-0">La planta de café arábica es uno de los dos principales
+                                cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
+                                en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
+                                tienes de llevarte a los labios siempre que te tomes una taza.</p>
+                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Arabia Saudí
+                            </p>
                             <p class="texto-tarjeta-gramos mb-0">500gr</p>
                         </div>
                         <div class="chip-contenedor">
@@ -123,8 +141,12 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café Tarrazú</p>
-                            <p class="texto-tarjeta mb-0">Tarrazú es otro de los tipos de café en grano. Es otra variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica, siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café ligeramente ácido y con sabor parecido al del chocolate.</p>
-                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Costa Rica</p>
+                            <p class="texto-tarjeta mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
+                                variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica,
+                                siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café
+                                ligeramente ácido y con sabor parecido al del chocolate.</p>
+                            <p class="texto-tarjeta-origen mb-0"><span class="texto-origen">Origen:</span> Costa Rica
+                            </p>
                             <p class="texto-tarjeta-gramos mb-0">500gr</p>
                         </div>
                         <div class="chip-contenedor">
@@ -136,12 +158,16 @@
                 <hr class="linea-horizontal-secciones">
             </div>
         </div>
-        
+
         <div class="carrusel-video-recetas container px-0 mx-auto">
             <h2 class="titulo-de-secciones">RECETAS</h2>
             <div class="contenedor-tarjetas-recetas">
                 <div class=" contenedor-tarjetas col-12 col-md-4 p-2 ">
                     <div class="tarjeta-de-receta mx-auto">
+                        <!-- <video width="320" height="240" controls>
+                            <source src="https://res.cloudinary.com/elizapardo/video/upload/v1678816662/Web%20Kofe/production_ID_4378109_kotro2.mp4" type="video/mp4">
+                          Your browser does not support the video tag.
+                          </video> -->
                         <div class="icono-circle-pay">
                             <img src="./multimedia/img/🦆 icon _play circle.png" alt="">
                         </div>
@@ -173,7 +199,8 @@
                             </div>
                         </div>
                     </div>
-                </div><div class=" contenedor-tarjetas col-12 col-md-4 p-2 ">
+                </div>
+                <div class=" contenedor-tarjetas col-12 col-md-4 p-2 ">
                     <div class="tarjeta-de-receta mx-auto">
                         <div class="icono-circle-pay">
                             <img src="./multimedia/img/🦆 icon _play circle.png" alt="">
@@ -192,10 +219,13 @@
                 </div>
             </div>
         </div>
+        <div class="chat-ayuda">
+            <img src="./multimedia/img/Group 175.png" alt="">
+        </div>
     </main>
     <footer>
         <div>
-            <p class="texto-del-footer"> escribe un correo con tus dudas</p>
+            <p class="texto-del-footer"></p>
         </div>
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
