agregado de fotos productos

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -72,13 +72,15 @@
                 <div class=" col-12 col-md-3 p-2">
                     <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
+                            <img src="../multimedia/img/cafe-granos-01.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
-                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
-                                toffee.</p>
+                            <p class="titulo-principal-tarjeta mb-0">Café Robusta</p>
+                            <p class="texto-tarjeta mb-0">El otro gran café no es otro que el Robusta, perteneciente a
+                                la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
+                                resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
+                                cafeto Robusta puede cultivarse a partir de altitudes de solo 200 metros sobre el nivel
+                                del mar, a diferencia del arábica que se cultiva entre los 800 y los 2100 metros.</p>
                             <div class="estrellas">
                                 <img src="../multimedia/img/Group 205.png" alt="">
                             </div>
@@ -94,16 +96,17 @@
                 <div class=" col-12 col-md-3 p-2">
                     <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
-                        </div>
-                        <div class="estrellas">
-                            <img src="../multimedia/img/Group 205.png" alt="">
+                            <img src="../multimedia/img/cafe-granos-02.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
-                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
-                                toffee.</p>
+                            <p class="titulo-principal-tarjeta mb-0">Café Java</p>
+                            <p class="texto-tarjeta mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
+                                cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al
+                                café unas características muy marcadas, con una semilla que destaca por su fuerte sabor,
+                                con toques picantes y que deja una sensación de dulzor en el paladar.</p>
+                                <div class="estrellas">
+                                    <img src="../multimedia/img/Group 205.png" alt="">
+                                </div>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
@@ -116,16 +119,17 @@
                 <div class=" col-12 col-md-3 p-2">
                     <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
-                        </div>
-                        <div class="estrellas">
-                            <img src="../multimedia/img/Group 205.png" alt="">
+                            <img src="../multimedia/img/cafe-granos-03.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
-                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
-                                toffee.</p>
+                            <p class="titulo-principal-tarjeta mb-0">Café arábica</p>
+                            <p class="texto-tarjeta mb-0">La planta de café arábica es uno de los dos principales
+                                cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
+                                en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
+                                tienes de llevarte a los labios siempre que te tomes una taza.</p>
+                                <div class="estrellas">
+                                    <img src="../multimedia/img/Group 205.png" alt="">
+                                </div>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
@@ -138,16 +142,17 @@
                 <div class=" col-12 col-md-3 p-2">
                     <div class="tarjeta-de-producto mx-auto">
                         <div class="imagen-principal-tarjeta">
-                            <img src="../multimedia/img/pexels-oleksandr-pidvalnyi-12955822.jpg">
-                        </div>
-                        <div class="estrellas">
-                            <img src="../multimedia/img/Group 205.png" alt="">
+                            <img src="../multimedia/img/cafe-granos-04.png">
                         </div>
                         <div>
-                            <p class="titulo-principal-tarjeta mb-0">Café arabica 100%</p>
-                            <p class="texto-tarjeta mb-0">Cafe molido arabica 100% que combina el mejor café con la
-                                fragancia y sabor únicos de la avellana, la vainilla, la canela, el chocolate y el
-                                toffee.</p>
+                            <p class="titulo-principal-tarjeta mb-0">Café Tarrazú</p>
+                            <p class="texto-tarjeta mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
+                                variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica,
+                                siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café
+                                ligeramente ácido y con sabor parecido al del chocolate.</p>
+                                <div class="estrellas">
+                                    <img src="../multimedia/img/Group 205.png" alt="">
+                                </div>
                             <p class="texto-tarjeta-precio mb-0">21,95 €</p>
                             <p class="texto-tarjeta-iva mb-0">IVA Incluido</p>
 
