edicion de links

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
                     <img src="../multimedia/img/menu_hambueguesa.svg">
                 </button>
                 <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="./producto.html">Productos</a></li>
-                    <li><a class="dropdown-item" href="./trabajaconnosotros.html">Empleo</a></li>
-                    <li><a class="dropdown-item" href="./sobrenosotros.html">Nosotros</a></li>
+                    <li><a class="dropdown-item" href="./pages/productos.html">Productos</a></li>
+                    <li><a class="dropdown-item" href="./pages/empleo.html">Empleo</a></li>
+                    <li><a class="dropdown-item" href="./pages/nosotros.html">Nosotros</a></li>
                 </ul>
             </div>
             <div class="ul-contenedor col-9 col-md-auto d-none d-md-flex">
