edicion de tarjetas de producto

--- a/pages/productos.html
+++ b/pages/productos.html
@@ -77,6 +77,7 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café Robusta</p>
+                            <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
                             <p class="texto-tarjeta mb-0">El otro gran café no es otro que el Robusta, perteneciente a
                                 la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
                                 resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
@@ -101,6 +102,7 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café Java</p>
+                            <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
                             <p class="texto-tarjeta mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
                                 cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al
                                 café unas características muy marcadas, con una semilla que destaca por su fuerte sabor,
@@ -124,6 +126,7 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café arábica</p>
+                            <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
                             <p class="texto-tarjeta mb-0">La planta de café arábica es uno de los dos principales
                                 cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
                                 en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
@@ -147,6 +150,7 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café Tarrazú</p>
+                            <p class="titulo-principal-tarjeta-clase">Tipo: Grano</p>
                             <p class="texto-tarjeta mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
                                 variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica,
                                 siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café
@@ -170,6 +174,7 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café Robusta</p>
+                            <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
                             <p class="texto-tarjeta mb-0">El otro gran café no es otro que el Robusta, perteneciente a
                                 la República Democrática del Congo. Este cafeto se distingue principalmente por la mayor
                                 resistencia de las semillas, que permite su cultivo en un mayor abanico de terrenos: el
@@ -194,6 +199,7 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café Java</p>
+                            <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
                             <p class="texto-tarjeta mb-0">Café arábica, el Java apareció en Indonesia, en el siglo XVII,
                                 cuando el país aún era una colonia holandesa. El particular clima y suelo del país da al
                                 café unas características muy marcadas, con una semilla que destaca por su fuerte sabor,
@@ -217,6 +223,7 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café arábica</p>
+                            <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
                             <p class="texto-tarjeta mb-0">La planta de café arábica es uno de los dos principales
                                 cafetos que existen actualmente. Entre 7 y 8 de cada 10 granos de café que se producen
                                 en el mundo pertenecen a este tipo, así que es el tipo de café que más probabilidades
@@ -240,6 +247,7 @@
                         </div>
                         <div>
                             <p class="titulo-principal-tarjeta mb-0">Café Tarrazú</p>
+                            <p class="titulo-principal-tarjeta-clase">Tipo: Molido</p>
                             <p class="texto-tarjeta mb-0">Tarrazú es otro de los tipos de café en grano. Es otra
                                 variedad arábica y tiene su origen en la zona montañosa y volcánica de Costa Rica,
                                 siendo una de las más apreciadas por los expertos cafeteros. Se trata de un café
